package org.uade.ejercicio4.enums;

public enum Descuento {

    UnaSemana(0.1),
    QuinceDias(0.2),

    UnMes(0.3);
    Descuento(double v) {
    }
}
