package org.uade.ejercicio4.enums;

public enum Estado {
    Disponible,Reservada
}
