package org.uade.ejercicio4.enums;

public enum EstadoReserva {
    Activa, Tomada, Cumplida, Senada, Vencida, Cancelada;
}
