package org.uade.ejercicio4.enums;

public enum PrecioHabitacion {
    PrecioSimple(500),
    PrecioDoble(100000),
    PrecioMatrimonial(1500);

    PrecioHabitacion(double i) {
    }
}
