package org.uade.ejercicio4.enums;

public enum TipoCliente {

    Habitual,Esporadico
}
